v1.8.0-RC1