@@ -26,7 +26,7 @@ plugins {
 
 sourceCompatibility = 1.11
 
-version = '1.7.2'
+version = '1.8.0'
 
 repositories {
     flatDir {
@@ -41,29 +41,28 @@ dependencies {
     implementation 'net.sinetstream:SINETStream-kafka:1.+'
     implementation 'net.sinetstream:SINETStream-mqtt:1.+'
     implementation 'net.sinetstream:SINETStream-s3:1.+'
-    runtimeOnly 'org.slf4j:slf4j-nop:1.7.36'
+    runtimeOnly 'org.slf4j:slf4j-nop:2.0.7'
 
     if (false) {
         /* XXX: inject dependency when using flatDir */
         // api
-        runtimeOnly group: 'org.yaml', name: 'snakeyaml', version: '1.32'
+        runtimeOnly group: 'org.yaml', name: 'snakeyaml', version: '1.33'
         runtimeOnly group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'
         runtimeOnly group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
-        runtimeOnly group: 'org.apache.commons', name: 'commons-text', version: '1.9'
-        runtimeOnly group: 'org.apache.commons', name: 'commons-rng-simple', version: '1.4'
+        runtimeOnly group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
+        runtimeOnly group: 'org.apache.commons', name: 'commons-rng-simple', version: '1.5'
         runtimeOnly group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
         runtimeOnly group: 'org.apache.avro', name: 'avro', version: '1.11.1'
         runtimeOnly 'javax.xml.bind:jaxb-api:2.3.1'
-        runtimeOnly 'com.sun.xml.bind:jaxb-core:2.3.0.1'
-        runtimeOnly 'com.sun.xml.bind:jaxb-impl:2.3.0.1'
+        runtimeOnly 'com.sun.xml.bind:jaxb-core:4.0.2'
+        runtimeOnly 'com.sun.xml.bind:jaxb-impl:4.0.2'
         runtimeOnly 'javax.activation:javax.activation-api:1.2.0'
-        runtimeOnly group: 'com.google.guava', name: 'guava', version: '31.1-jre'
         runtimeOnly group: 'org.jdeferred.v2', name: 'jdeferred-core', version: '2.0.0'
-        runtimeOnly 'com.google.http-client:google-http-client:1.42.2'
-        runtimeOnly 'com.google.http-client:google-http-client-gson:1.42.2'
+        runtimeOnly 'com.google.http-client:google-http-client:1.43.1'
+        runtimeOnly 'com.google.http-client:google-http-client-gson:1.43.1'
 
         //plugin-kafka
-        runtimeOnly group: 'org.apache.kafka', name: 'kafka-clients', version: '2.8.2'
+        runtimeOnly group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
         runtimeOnly group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
         runtimeOnly group: 'org.jdeferred.v2', name: 'jdeferred-core', version: '2.0.0'
 
@@ -72,7 +71,7 @@ dependencies {
         runtimeOnly group: 'org.jdeferred.v2', name: 'jdeferred-core', version: '2.0.0'
 
         //plugin-s3
-        runtimeOnly platform('software.amazon.awssdk:bom:2.17.274')
+        runtimeOnly platform('software.amazon.awssdk:bom:2.20.33')
         runtimeOnly 'software.amazon.awssdk:s3'
     }
 }
@@ -80,6 +79,12 @@ dependencies {
 application {
     mainClassName = 'jp.ad.sinet.stream.example.text.TextProducer'
     applicationName = 'text-producer'
+
+    // WORKAROUND for:
+    //     WARNING: An illegal reflective access operation has occurred
+    //     WARNING: Illegal reflective access by org.eclipse.paho.client.mqttv3.internal.FileLock
+    // see https://github.com/eclipse/paho.mqtt.java/issues/507#issuecomment-814681499
+    applicationDefaultJvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
 }
 
 task createExtraRunApp(type: CreateStartScripts) {
@@ -87,6 +92,12 @@ task createExtraRunApp(type: CreateStartScripts) {
     classpath = startScripts.classpath
     outputDir = startScripts.outputDir
     applicationName = 'text-consumer'
+
+    // WORKAROUND for:
+    //     WARNING: An illegal reflective access operation has occurred
+    //     WARNING: Illegal reflective access by org.eclipse.paho.client.mqttv3.internal.FileLock
+    // see https://github.com/eclipse/paho.mqtt.java/issues/507#issuecomment-814681499
+    defaultJvmOpts = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
 }
 
 applicationDistribution.into("bin") {
